// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders card correctly 1`] = `
<div
  className="fd-card"
/>
`;

exports[`Card renders longread card correctly 1`] = `
<div
  className="fd-card longread"
/>
`;
